style changed in mobile

--- a/MBA/index.html
+++ b/MBA/index.html
@@ -2614,7 +2614,7 @@
 
                         <div class="flex items-center justify-start">
                           <div class="font-railway mr-2 mt-[1.125rem] lg:mt-[0.9166rem] basis-1/5 Form_group__rP395">
-                            <label class="text-blu" id="null-label2" for="country-code-select">Country Code *</label>
+                            <label class="text-blu" id="null-label2" for="country-code-select" style="white-space: nowrap;">Country Code *</label> 
                             <!-- <div class="Form_control__eYGP8"> -->
                               <select class="banner-input" id="country-code-select">
                                 <option value="+91" selected="">+91</option>
