--- a/main.html
+++ b/main.html
@@ -108,7 +108,7 @@
         <h1>Login</h1>
         <input type="text" id="username" placeholder="Username" />
         <input type="password" id="password" placeholder="Password" />
-        <button onclick="authenticate()">Enter credentials</button>
+        <button onclick="authenticate()">Enter Details</button>
         <p id="error-message" style="color: red; display: none;">Invalid credentials. Try again.</p>
     </div>
 
