--- a/main.html
+++ b/main.html
@@ -108,7 +108,7 @@
         <h1>Login</h1>
         <input type="text" id="username" placeholder="Username" />
         <input type="password" id="password" placeholder="Password" />
-        <button onclick="authenticate()">Enter Details</button>
+        <button onclick="authenticate()">Enter credentials</button>
         <p id="error-message" style="color: red; display: none;">Invalid credentials. Try again.</p>
     </div>
 
@@ -125,8 +125,8 @@
 
     <script>
         // Set your username and password here
-        const USERNAME = "admin";
-        const PASSWORD = "password123";
+        const USERNAME = "amitypages";
+        const PASSWORD = "ameyaunivo@111";
 
         function authenticate() {
             const username = document.getElementById("username").value;
