--- a/main.html
+++ b/main.html
@@ -117,21 +117,21 @@
         <h1>Amity HTML Pages</h1>
         <div class="links">
             <ol>
-                <li><a href="./MBA/">MBA Page</a></li>
-                <li><a href="./MCA/">MCA Page</a></li>
-                <li><a href="./BBA/">BBA Page</a></li>
-                <li><a href="./BCA/">Bachelor of Computer Applications Online Page</a></li>
-                <li><a href="./mba-general-management/">mba-general-management page</a></li>
-                <li><a href="./bba-mba/">bba-mba page</a></li>
-                <li><a href="./BCOM/">Bachelor of Commerce Online Page</a></li>
-                <li><a href="./bcom-mba/">bcom-mba page</a></li>
-                <li><a href="./MBA_HR/">MBA Human Resources HR Analytics Online Page</a></li>
-                <li><a href="./MBA_IF/">MBA International Finance Page</a></li>
-                <li><a href="./mba-business-analytics-online/">mba-business-analytics-online page</a></li>
-                <li><a href="./MBA-Data Science/">MBA-Data Science Page</a></li>
-                <li><a href="./MBA-Digital Entrepreneurship/">MBA-Digital Entrepreneurship Page</a></li>
-                <li><a href="./mba-digital-marketing-management-online/">mba-digital-marketing-management-online page</a></li>
-                <li><a href="./MBA-Dual Specialization/">MBA-Dual Specialization Page</a></li>
+                <li><a href="./MBA/">Master of Business Administration ( Online MBA )</a></li>
+                <li><a href="./mba-general-management/">Master of Business Administration in General Management</a></li>
+                <li><a href="./MCA/">Master of Computer Applications (MCA)</a></li>
+                <li><a href="./BBA/">Bachelor of Business Administration (BBA)</a></li>
+                <li><a href="./BCA/">Bachelor of Computer Applications (BCA)</a></li>
+                <li><a href="./bba-mba/">BBA + MBA Degree Program</a></li>
+                <li><a href="./BCOM/">Bachelor of Commerce</a></li>
+                <li><a href="./bcom-mba/">B.Com + MBA Degree Program</a></li>
+                <li><a href="./MBA_HR/">Master of Business Administration with specialization in Human Resource Analytics (MBA)</a></li>
+                <li><a href="./MBA_IF/">Master of Business Administration with specialization in International Finance (MBA)</a></li>
+                <li><a href="./mba-business-analytics-online/">Master of Business Administration with specialization in Business Analytics (MBA)</a></li>
+                <li><a href="./MBA-Data Science/">Master of Business Administration with specialization in Data Science (MBA)</a></li>
+                <li><a href="./MBA-Digital Entrepreneurship/">Master of Business Administration with specialization in Digital Entrepreneurship (MBA)</a></li>
+                <li><a href="./mba-digital-marketing-management-online/">Master of Business Administration with specialization in Digital Marketing Management (MBA)</a></li>
+                <li><a href="./MBA-Dual Specialization/">MBA With Dual Specialization</a></li>
                 <!-- <li><a href="./Program/">Program page</a></li> -->
             </ol>
         </div>
