Iteration 2 changes - segregated modals for header, footer ,programs, login, download_brochure and Apply Now.

--- a/master-of-business-administration-online/index.html
+++ b/master-of-business-administration-online/index.html
@@ -354,7 +354,7 @@
             <a class="navigation__link" href="#6">Eligibility</a>
             <a class="navigation__link" href="#7">Fee</a>
             <a class="navigation__link" href="#8">Faculty</a>
-            <a class="navigation__link cus-btn btn-blue sec-apply" style="color: #fff;" href="">Apply Now</a>
+            <a class="navigation__link cus-btn btn-blue sec-apply" id="apply-now-btn" style="color: #fff;" href="">Apply Now</a>
           </nav>
         </div>
       </div>
