--- a/master-of-computer-applications-online/index.html
+++ b/master-of-computer-applications-online/index.html
@@ -2572,6 +2572,7 @@
 <script src="./../CommonJS/index.js"></script>
 <script src="./../CommonJS/footer.js"></script>
 <script src="./../CommonJS/modals.js"></script>
+<script src="./../CommonJS/program.js"></script>
 <!-- <script src="./../CommonJS/applyModal.js"></script> -->
  
 <script>
