code merged and checking the left errors of career services and advantages

--- a/main.html
+++ b/main.html
@@ -140,7 +140,10 @@
                 <li><a href="./bachelor-of-business-administration-online/">Bachelor of Business Administration (BBA)</a></li> 
                 <li><a href="./bachelor-of-computer-applications-online/">Bachelor of Computer Applications (BCA)</a></li>
                 <li><a href="./master-of-computer-applications-online/">Master of Computer Applications (MCA)</a></li>
-                <li><a href="./bachelor-of-commerce-online/">Bachelor of Commerce</a></li> <!--Commented-->
+                <li><a href="./bachelor-of-commerce-online/">Bachelor of Commerce</a></li> 
+                <li><a href="./amity-online-advantage/">Amity Online Advantages</a></li> 
+                <li><a href="./career_services/">Carrer Services</a></li> 
+                <li><a href="./Program/">Program</a></li> 
             </ol>
         </div>
     </div>
