Iteration 3 changes - segregated modals for header, footer ,programs, login, download_brochure and Apply Now and updated MBA MCA BBA BCA Carrer services and advantagess page along with Progam page with functionalities

--- a/amity-online-advantage/index.html
+++ b/amity-online-advantage/index.html
@@ -429,7 +429,7 @@
             </h2>
             <p class="SectionCard_subtitle__vVqmD hidden lg:block">Immerse yourself in the energy<!-- --> <br>of a
               lively campus atmosphere</p>
-            <p class="SectionCard_subtitle__vVqmD block lg:hidden">Immerse yourself in the energy of a lively campus
+            <p class="SectionCard_subtitle__vVqmD block lg:hidden">Immerse yourself in the energy <br> of a lively campus
               atmosphere
             </p>
           </div>
