--- a/carrer.html
+++ b/carrer.html
@@ -402,7 +402,7 @@
                         professional growth at Amity Online
                     </p>
                 </div>
-                <div class="SectionCard_hr__sFh5X"></div>
+                <!-- <div class="SectionCard_hr__sFh5X"></div> -->
                 <div class="pt-7 lg:pt-7">
                     <h2>
                         <div class="styles_root__Yu_Om">
@@ -475,12 +475,12 @@
                     <p class="SectionCard_subtitle__vVqmD hidden lg:block">These are our trusted recruitment<!-- -->
                         <br>collaborators for hiring students
                     </p>
-                    <p class="SectionCard_subtitle__vVqmD block lg:hidden">These are our trusted recruitment
+                    <p class="SectionCard_subtitle__vVqmD block lg:hidden">These are our trusted recruitment</br>
                         collaborators for
                         hiring students
                     </p>
                 </div>
-                <div class="SectionCard_hr__sFh5X"></div>
+                <!-- <div class="SectionCard_hr__sFh5X"></div> -->
                 <div class="pt-7 lg:pt-7">
                     <div>
                         <div class="Carousel ">
@@ -1053,13 +1053,10 @@
         <div class="container" id="desktop_hear">
             <!-- Desktop Carousel (original) -->
             <div class="SectionCard_root__vJRVT">
-                <div class="flex justify-between lining-nums lg:items-center flex-col lg:flex-row lg:align-center">
-                    <h2 class="SectionCard_title__DSA2A">Hear what our students have to say
-                    </h2>
-                    <p class="SectionCard_subtitle__vVqmD hidden lg:block">Discover student learning experiences<!-- -->
-                        <br>and journeys at Amity Online
-                    </p>
-                </div>
+                <div class="flex justify-between lining-nums lg:items-center flex-col lg:flex-row lg:align-center"><h2 class="SectionCard_title__DSA2A">Hear from our students who have
+                    seized the </br> opportunity
+                    </h2><p class="SectionCard_subtitle__vVqmD hidden lg:block">Explore students journeys who achieved<!-- --> </br>their dream careers with Amity Online</p><p class="SectionCard_subtitle__vVqmD block lg:hidden">Explore students journeys who achieved </br> their dream careers with Amity Online
+                    </p></div>
                 <div class="SectionCard_hr__sFh5X"></div>
                 <div class="desktop-carousel">
                     <!-- Original carousel content here -->
