--- a/carrer.html
+++ b/carrer.html
@@ -392,17 +392,12 @@
     <section class="undefined">
         <div class="container">
             <div class="SectionCard_root__vJRVT">
-                <div class="flex justify-between lining-nums lg:items-center flex-col lg:flex-row lg:align-center">
-                    <h2 class="SectionCard_title__DSA2A">Unlock your potential with Amity Online
-                    </h2>
-                    <p class="SectionCard_subtitle__vVqmD hidden lg:block">Discover limitless career
-                        opportunities<!-- --> <br>for professional growth at Amity Online</p>
-                    <p class="SectionCard_subtitle__vVqmD block lg:hidden">Discover limitless career opportunities </br>
-                        for
-                        professional growth at Amity Online
-                    </p>
+                <div class="heading-block">
+                    <h2>Unlock your potential with Amity Online</h2>
+                    <p>Discover limitless career opportunities <br>
+                        for professional growth at Amity Online</p>
                 </div>
-                <!-- <div class="SectionCard_hr__sFh5X"></div> -->
+                <div class="SectionCard_hr__sFh5X"></div>
                 <div class="pt-7 lg:pt-7">
                     <h2>
                         <div class="styles_root__Yu_Om">
@@ -469,18 +464,12 @@
     <section class="overflow-x-hidden">
         <div class="container">
             <div class="SectionCard_root__vJRVT SectionCard_card__76a8h">
-                <div class="flex justify-between lining-nums lg:items-center flex-col lg:flex-row lg:align-center">
-                    <h2 class="SectionCard_title__DSA2A">Our recruiters
-                    </h2>
-                    <p class="SectionCard_subtitle__vVqmD hidden lg:block">These are our trusted recruitment<!-- -->
-                        <br>collaborators for hiring students
-                    </p>
-                    <p class="SectionCard_subtitle__vVqmD block lg:hidden">These are our trusted recruitment</br>
-                        collaborators for
-                        hiring students
-                    </p>
+                <div class="heading-block">
+                    <h2>Our recruiters</h2>
+                    <p>These are our trusted recruitment <br>
+                        collaborators for hiring students</p>
                 </div>
-                <!-- <div class="SectionCard_hr__sFh5X"></div> -->
+                <div class="SectionCard_hr__sFh5X"></div>
                 <div class="pt-7 lg:pt-7">
                     <div>
                         <div class="Carousel ">
@@ -840,15 +829,11 @@
     <section class="overflow-x-hidden">
         <div class="container" id="mobile_hear">
             <div class="SectionCard_root__vJRVT">
-                <div class="flex justify-between lining-nums lg:items-center flex-col lg:flex-row lg:align-center">
-                    <h2 class="SectionCard_title__DSA2A">Hear from our students who have
-                        seized the opportunity
-                    </h2>
-                    <p class="SectionCard_subtitle__vVqmD hidden lg:block">Explore students journeys who
-                        achieved<!-- --> <br>their dream careers with Amity Online</p>
-                    <p class="SectionCard_subtitle__vVqmD block lg:hidden">Explore students journeys who achieved their
-                        dream careers with Amity Online
-                    </p>
+                <div class="heading-block">
+                    <h2>Hear from our students who have seized the
+                        opportunity</h2>
+                    <p>Explore students journeys who achieved <br>
+                        their dream careers with Amity Online</p>
                 </div>
                 <div class="SectionCard_hr__sFh5X"></div>
                 <div class="pt-7 lg:pt-7">
@@ -1053,10 +1038,12 @@
         <div class="container" id="desktop_hear">
             <!-- Desktop Carousel (original) -->
             <div class="SectionCard_root__vJRVT">
-                <div class="flex justify-between lining-nums lg:items-center flex-col lg:flex-row lg:align-center"><h2 class="SectionCard_title__DSA2A">Hear from our students who have
-                    seized the </br> opportunity
-                    </h2><p class="SectionCard_subtitle__vVqmD hidden lg:block">Explore students journeys who achieved<!-- --> </br>their dream careers with Amity Online</p><p class="SectionCard_subtitle__vVqmD block lg:hidden">Explore students journeys who achieved </br> their dream careers with Amity Online
-                    </p></div>
+                <div class="heading-block">
+                    <h2>Hear from our students who have seized the
+                        opportunity</h2>
+                    <p>Explore students journeys who achieved <br>
+                        their dream careers with Amity <br> Online</p>
+                </div>
                 <div class="SectionCard_hr__sFh5X"></div>
                 <div class="desktop-carousel">
                     <!-- Original carousel content here -->
