Iteration 3 (final ) changes - segregated modals for header, footer ,programs, login, download_brochure and Apply Now and updated All pages with functionalities

--- a/amity-online-advantage/index.html
+++ b/amity-online-advantage/index.html
@@ -1491,7 +1491,7 @@
   const desktopSwiper = new Swiper('.desktop-carousel .swiper', {
     slidesPerView: 1,
     spaceBetween: 16,
-    loop: true,
+    loop: false,
     pagination: {
       el: '.swiper-pagination',
       clickable: true
@@ -1506,7 +1506,7 @@
 const testimonialSwiper = new Swiper('.testimonial-carousel', {
   slidesPerView: 1,
   spaceBetween: 20,
-  loop: true,
+  loop: false,
   pagination: {
     el: '.testimonial-carousel .swiper-pagination',
     clickable: true
@@ -1523,7 +1523,7 @@ const testimonialSwiper = new Swiper('.testimonial-carousel', {
     slidesPerView: 1.2,
     centeredSlides: true,
     spaceBetween: 16,
-    loop: true,
+    loop: false,
     pagination: {
       el: '.video-carousel .swiper-pagination',
       clickable: true
@@ -1535,7 +1535,11 @@ const testimonialSwiper = new Swiper('.testimonial-carousel', {
     [desktopSwiper, testimonialSwiper, videoSwiper].forEach(swiper => swiper.update());
   });
 </script>
-  
+<script>
+  $('.header-search-icon').click(function () {
+    $('#search-input').toggleClass('active');
+  });
+</script>
   
 
 </body>
