--- a/carrer.html
+++ b/carrer.html
@@ -1051,7 +1051,7 @@
                         <h2>
                             <div>
                                 <div
-                                    class="swiper swiper-initialized testimonial-swiper swiper-horizontal Carousel__blueBullet StudentsCarousel_carousel__XLxe_ swiper-backface-hidden">
+                                    class="swiper swiper-initialized  swiper-horizontal Carousel__blueBullet StudentsCarousel_carousel__XLxe_ swiper-backface-hidden">
                                     <div class="swiper-wrapper"
                                         style="transition-duration: 0ms; transform: translate3d(0px, 0px, 0px); transition-delay: 0ms;">
                                         <div class="swiper-slide swiper-slide-active"
@@ -1513,10 +1513,11 @@
 
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"
         integrity="sha256-oP6HI9z1XaZNBrJURtCoUT5SUnxFr8s3BzRl+cbzUq8=" crossorigin="anonymous"></script>
-    <script src="CommonJS/career.js"></script>
-    <script src="CommonJS/footer.js"></script>
-    <script src="CommonJS/modals.js"></script>
-    <script src="./amity-online-advantage/amityadv.js"></script>
+        <script src="CommonJS/career.js"></script>
+        <script src="CommonJS/footer.js"></script>
+        <script src="CommonJS/modals.js"></script>
+        <script src="./amity-online-advantage/amityadv.js"></script>
+        <!-- <script src="CommonJS/index.js"></script> -->
     <!-- <script src="CommonJS/program.js"></script> -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.2.3/js/bootstrap.min.js"
         integrity="sha512-1/RvZTcCDEUjY/CypiMz+iqqtaoQfAITmNSJY17Myp4Ms5mdxPS5UV7iOfdZoxcGhzFbOm6sntTKJppjvuhg4g=="
@@ -1593,7 +1594,7 @@
                 delay: 5000,
                 disableOnInteraction: false,
             },
-            loop: true,
+            loop: false,
             pagination: {
                 el: '.swiper-pagination',
                 clickable: true,
